--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image:linear-gradient(rgba(0, 0, 0, 0.562),rgba(0,0,0,0.562)), url(./images/back.jpg);
+  background-size:cover;
+  height: 100vh;
+  position: relative;
+--webkit-backround-size:cover;
+  background-position: center center;
+
 }
 
 code {
